...
    <string name="choose_route_generation">Izvēlieties maršruta ģenerēšanas veidu</string>
    <string name="generate_route">Ģenerēt maršrutu</string>
    <string name="empty_route">Tukšs maršruts</string>
    <string name="generating_route">Notiek maršruta ģenerēšana…</string>
    <string name="clear_routes">Notīrīt maršrutus</string>
    <string name="manage_routes">Pārvaldīt maršrutus</string>
    <string name="star_route">Atzīmēt maršrutu ar zvaigzni</string>
    <string name="unstar_route">Noņemt maršruta zvaigzni</string>
    <string name="delete_route">Dzēst maršrutu</string>
    <string name="delete_route_title">Dzēst šo maršrutu?</string>
    <string name="delete_route_confirmation">“%1$s” tiks noņemts no šīs kartes.</string>
    <string name="duplicate_route">Dublēt maršrutu</string>
    <string name="route_copy_name">%1$s kopija</string>
    <string name="hide_route">Paslēpt maršruta informācijā</string>
...
    <string name="save_copy">Saglabāt kopiju</string>
    <string name="move_route_up">Pārvietot maršrutu uz augšu</string>
    <string name="move_route_down">Pārvietot maršrutu uz leju</string>
    <string name="delete_all_unstarred_routes">Dzēst visus ar zvaigzni neatzīmētos maršrutus</string>
    <string name="delete_unstarred_routes_title">Dzēst visus ar zvaigzni neatzīmētos maršrutus?</string>
    <string name="delete_unstarred_routes_confirmation">Visi ar zvaigzni neatzīmētie maršruti tiks noņemti no šīs kartes.</string>
    <string name="discard_route_management_changes_title">Atmest maršrutu izmaiņas?</string>
    <string name="discard_route_management_changes_confirmation">Nesaglabātie maršrutu nosaukumi, zvaigznes un dzēšanas tiks zaudētas.</string>
    <string name="no_routes_to_manage">Nav pārvaldāmu maršrutu.</string>
    <string name="clear_routes_title">Notīrīt visus maršrutus?</string>
    <string name="clear_routes_confirmation">Pamata maršruts un visi alternatīvie maršruti tiks noņemti.</string>
    <string name="skip">Izlaist</string>
    <string name="no_route_generated">Maršruts nav ģenerēts</string>
...
    <string name="points_per_kilometer">Punkti kilometrā</string>
    <string name="recent_maps">Saglabātās kartes</string>
    <string name="no_recent_maps">Vēl nav saglabātu karšu.</string>
    <string name="boundary_not_detected_title">Kartes robeža nav atrasta</string>
    <string name="edit_map">Labot karti</string>
    <string name="edit_route">Labot maršrutu</string>
    <string name="route_actions">Maršruta darbības</string>
    <string name="map_actions">Kartes darbības</string>
    <string name="route_points_per_kilometer_format">%1$.2f p/km</string>
    <string name="add_route_point">Pievienot punktu</string>
    <string name="reverse_route">Apgriezt</string>
    <string name="save_route_edit_title">Saglabāt maršruta izmaiņas?</string>
    <string name="save_route_edit_confirmation">Labotā punktu secība aizstās šo maršrutu.</string>
...
    <string name="add_point">Pievienot punktu</string>
    <string name="done_editing_points">Pabeigt punktu labošanu</string>
    <string name="save_points">Saglabāt punktus</string>
    <string name="point_edit_help">Īsi turiet punktu, pēc tam velciet, lai mainītu tā atrašanās vietu. Pieskarieties punktam, lai labotu tā veidu vai kodu. Izmantojiet pievienošanas pogu, lai izveidotu jaunu punktu.</string>
    <string name="edit_point">Labot punktu</string>
    <string name="control_code">Kontrolpunkta kods</string>
    <string name="save">Saglabāt</string>
    <string name="delete">Dzēst</string>
    <string name="cancel">Atcelt</string>
    <string name="point_type_start">Starts</string>
    <string name="point_type_finish">Finišs</string>
    <string name="point_type_start_finish">Starts/finišs</string>
    <string name="point_type_control">Kontrolpunkts</string>
    <string name="leave_map_edit_title">Atmest kartes izmaiņas?</string>
    <string name="leave_map_edit_confirmation">Atgriežoties veiktās izmaiņas šajā ekrānā tiks atmestas.</string>
...
